--- a/css/colors.scss
+++ b/css/colors.scss
@@ -1,6 +1,5 @@
-$red: red;
-$black: black;
-$white: white;
-$masonryGalleryBg: rgb(104, 167, 250);
-$imgBg: rgb(37, 37, 36);
-$bodyBg: lightgray;
+$bodyBg: white;
+$logoTextColor: black;
+$menuTextColor: black;
+$menuHoverBg: #dbff9b;
+$menuHovercolor: rgb(51, 51, 51);
