--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Great+Vibes&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap");
 *,
 *:after,
 *:before {
@@ -8,7 +10,7 @@
 }
 
 body {
-  background: lightgray;
+  background: white;
 }
 
 .clearfix::after {
@@ -31,7 +33,7 @@ img {
 
 .masonry-gallery {
   width: 80%;
-  margin: 100px auto;
+  margin: 50px auto;
 }
 
 .masonry-gallery .masonry-pattern-1 {
@@ -41,10 +43,19 @@ img {
   padding-bottom: 30%;
   overflow: hidden;
   float: left;
+  transition: width 0.5s;
+  -webkit-transition: width 0.5s;
 }
 
 .masonry-gallery .masonry-pattern-1 img {
   width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .masonry-gallery .masonry-pattern-1 {
+    width: 100%;
+    padding-bottom: 80%;
+  }
 }
 
 .masonry-gallery .masonry-pattern-2 {
@@ -55,10 +66,19 @@ img {
   overflow: hidden;
   float: left;
   margin-bottom: 5px;
+  transition: width 0.5s;
+  -webkit-transition: width 0.5s;
 }
 
 .masonry-gallery .masonry-pattern-2 img {
   width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .masonry-gallery .masonry-pattern-2 {
+    width: 100%;
+    padding-bottom: 80%;
+  }
 }
 
 .masonry-gallery .balance-height {
@@ -66,7 +86,54 @@ img {
   padding: 0 5px 25% 5px;
 }
 
-.masonry-gallery img {
-  border: 1px solid #4b4b4b;
+header {
+  width: 80%;
+  margin: auto;
+}
+
+header .logo-wrapper {
+  width: 100%;
+}
+
+header .logo-wrapper .logo {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 30px auto 10px auto;
+  border-radius: 50%;
+  font-family: 'Great Vibes', cursive;
+  color: black;
+  font-size: 60px;
+}
+
+header nav {
+  width: 100%;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+header nav .navbar {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+  list-style-type: none;
+}
+
+header nav .navbar li {
+  float: left;
+}
+
+header nav .navbar li a {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: black;
+  font-family: 'Architects Daughter', cursive;
+}
+
+header nav .navbar li a:hover {
+  color: #333333;
+  background: #dbff9b;
 }
 /*# sourceMappingURL=style.css.map */
