add hover effect

--- a/css/constant.scss
+++ b/css/constant.scss
@@ -3,3 +3,6 @@ $logoTextColor: black;
 $menuTextColor: black;
 $menuHoverBg: #dbff9b;
 $menuHovercolor: rgb(51, 51, 51);
+
+$mansoryTitleFontSize: 1.25rem;
+$mansoryTitleFont: 'Poppins', sans-serif;
