--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Great+Vibes&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap");
 *,
 *:after,
@@ -37,18 +38,57 @@ img {
 }
 
 .masonry-gallery .masonry-pattern-1 {
+  position: relative;
   width: 50%;
   height: 0;
   padding: 5px 5px 0 5px;
   padding-bottom: 30%;
   overflow: hidden;
   float: left;
+  cursor: pointer;
   transition: width 0.5s;
   -webkit-transition: width 0.5s;
 }
 
 .masonry-gallery .masonry-pattern-1 img {
   width: 100%;
+}
+
+.masonry-gallery .masonry-pattern-1 .flip-btm {
+  position: absolute;
+  right: 15px;
+  left: 15px;
+  bottom: 10px;
+  top: 15px;
+  background-color: rgba(255, 255, 255, 0.781);
+  padding: 15px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateX(90deg);
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: perspective(300px) rotateX(90deg);
+  -o-transform: rotateX(90deg);
+  -webkit-transform-origin: 50% 100% 0;
+          transform-origin: 50% 100% 0;
+  -webkit-transition: 0.5s;
+  text-align: center;
+}
+
+.masonry-gallery .masonry-pattern-1 .flip-btm h3 {
+  margin-top: 20%;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25rem;
+}
+
+.masonry-gallery .masonry-pattern-1 .flip-btm h3 span {
+  display: block;
+}
+
+.masonry-gallery .masonry-pattern-1:hover .flip-btm {
+  -webkit-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  -o-transform: rotateX(0deg);
 }
 
 @media only screen and (max-width: 600px) {
@@ -66,12 +106,51 @@ img {
   overflow: hidden;
   float: left;
   margin-bottom: 5px;
+  position: relative;
+  cursor: pointer;
   transition: width 0.5s;
   -webkit-transition: width 0.5s;
 }
 
 .masonry-gallery .masonry-pattern-2 img {
   width: 100%;
+}
+
+.masonry-gallery .masonry-pattern-2 .flip-btm {
+  position: absolute;
+  right: 15px;
+  left: 15px;
+  bottom: 10px;
+  top: 15px;
+  background-color: rgba(255, 255, 255, 0.781);
+  padding: 15px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateX(90deg);
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: perspective(300px) rotateX(90deg);
+  -o-transform: rotateX(90deg);
+  -webkit-transform-origin: 50% 100% 0;
+          transform-origin: 50% 100% 0;
+  -webkit-transition: 0.5s;
+  text-align: center;
+}
+
+.masonry-gallery .masonry-pattern-2 .flip-btm h3 {
+  margin-top: 20%;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25rem;
+}
+
+.masonry-gallery .masonry-pattern-2 .flip-btm h3 span {
+  display: block;
+}
+
+.masonry-gallery .masonry-pattern-2:hover .flip-btm {
+  -webkit-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  -o-transform: rotateX(0deg);
 }
 
 @media only screen and (max-width: 600px) {
@@ -84,6 +163,13 @@ img {
 .masonry-gallery .balance-height {
   margin-top: -25%;
   padding: 0 5px 25% 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .masonry-gallery .balance-height {
+    margin-top: 0;
+    padding: 0 5px 80% 5px;
+  }
 }
 
 header {
@@ -135,5 +221,19 @@ header nav .navbar li a {
 header nav .navbar li a:hover {
   color: #333333;
   background: #dbff9b;
+}
+
+button {
+  border: 2px solid black;
+  background: white;
+  padding: 5px 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 2px solid black;
+  background: black;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
