--- a/css/common.scss
+++ b/css/common.scss
@@ -29,3 +29,17 @@ img {
 .pull-right {
   float: right;
 }
+
+button {
+  border: 2px solid black;
+  background: white;
+  padding: 5px 20px;
+  font-weight: bold;
+  cursor: pointer;
+
+  &:hover {
+    border: 2px solid black;
+    background: black;
+    color: white;
+  }
+}
