--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ img {
   float: right;
 }
 
+button {
+  border: 2px solid black;
+  background: white;
+  padding: 5px 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 2px solid black;
+  background: black;
+  color: white;
+}
+
 .masonry-gallery {
   width: 80%;
   margin: 50px auto;
@@ -223,17 +237,34 @@ header nav .navbar li a:hover {
   background: #dbff9b;
 }
 
-button {
-  border: 2px solid black;
-  background: white;
-  padding: 5px 20px;
-  font-weight: bold;
-  cursor: pointer;
+footer {
+  width: 80%;
+  margin: 10px auto;
 }
 
-button:hover {
-  border: 2px solid black;
-  background: black;
-  color: white;
+footer .inner-footer {
+  width: 100%;
+  padding: 20px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+footer .inner-footer .contact-section {
+  margin: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: center;
+}
+
+footer .inner-footer .contact-section h3 {
+  font-size: 40px;
+  font-weight: normal;
+  font-family: 'Great Vibes', cursive;
+}
+
+footer .inner-footer .contact-section p {
+  font-size: 20px;
+  font-family: 'Architects Daughter', cursive;
 }
 /*# sourceMappingURL=style.css.map */
