--- a/css/style.scss
+++ b/css/style.scss
@@ -180,16 +180,31 @@ header {
   }
 }
 
-button {
-  border: 2px solid black;
-  background: white;
-  padding: 5px 20px;
-  font-weight: bold;
-  cursor: pointer;
+footer {
+  width: 80%;
+  margin: 10px auto;
 
-  &:hover {
-    border: 2px solid black;
-    background: black;
-    color: white;
+  .inner-footer {
+    width: 100%;
+    padding: 20px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+
+    .contact-section {
+      margin: auto;
+      width: fit-content;
+      text-align: center;
+
+      h3 {
+        font-size: 40px;
+        font-weight: normal;
+        font-family: 'Great Vibes', cursive;
+      }
+
+      p {
+        font-size: 20px;
+        font-family: 'Architects Daughter', cursive;
+      }
+    }
   }
 }
