--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,131 @@ button:hover {
   color: white;
 }
 
-.masonry-gallery {
+.row::after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+[class*='col-'] {
+  float: left;
+  padding: 15px;
+}
+
+/* For mobile phones: */
+[class*='col-'] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
+
+.aside {
+  position: relative;
+  float: left;
+  width: 220px;
+}
+
+.container {
   width: 80%;
+  margin: auto;
+}
+
+.padding-0 {
+  padding: 0px;
+}
+
+.padding-5 {
+  padding: 5px;
+}
+
+.padding-10 {
+  padding: 10px;
+}
+
+.padding-15 {
+  padding: 15px;
+}
+
+.masonry-gallery {
+  width: 100%;
   margin: 50px auto;
 }
 
@@ -187,7 +310,7 @@ button:hover {
 }
 
 header {
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -238,7 +361,7 @@ header nav .navbar li a:hover {
 }
 
 footer {
-  width: 80%;
+  width: 100%;
   margin: 10px auto;
 }
 
@@ -266,5 +389,40 @@ footer .inner-footer .contact-section h3 {
 footer .inner-footer .contact-section p {
   font-size: 20px;
   font-family: 'Architects Daughter', cursive;
+}
+
+.social-media {
+  padding: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+
+.social-media i {
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+.social-media .fa-facebook-square:hover {
+  color: #3578e5;
+}
+
+.social-media .fa-instagram:hover {
+  color: #f77737;
+}
+
+.social-media .fa-twitter-square:hover {
+  color: #1da1f2;
+}
+
+.product-wrapper {
+  padding: 5px;
+}
+
+.product-wrapper .product {
+  background: #d8d8d8;
+  padding: 20%;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
