--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 @import './constant.scss';
 @import './common.scss';
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins:500&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap');
@@ -239,11 +240,85 @@ footer {
 }
 
 .product-wrapper {
-  padding: 5px;
+  padding: 15px;
 
   .product {
-    background: rgb(216, 216, 216);
-    padding: 20%;
+    padding: 0%;
     text-align: center;
+    background: transparent;
+
+    .product-img-wrapper {
+      width: 100%;
+      height: 280px;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        opacity: 0.95;
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+        -webkit-transform: scale3d(1.05, 1.05, 1);
+        transform: scale3d(1.05, 1.05, 1);
+      }
+    }
+
+    .product-info {
+      padding: 10px;
+
+      h2 {
+        margin: 6px 0;
+        text-align: left;
+        font-size: 16px;
+        font-family: 'Roboto', sans-serif;
+      }
+
+      p {
+        margin: 3px 0;
+        text-align: left;
+        font-size: 18px;
+        font-weight: bold;
+        font-family: 'Roboto', sans-serif;
+      }
+
+      .discount-price {
+        font-size: 14px;
+        font-weight: 200;
+      }
+
+      button {
+        visibility: hidden;
+        margin-top: 10px;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background: white;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.185);
+      transition: all 0.2s ease-out;
+      button {
+        visibility: visible;
+      }
+
+      .product-img-wrapper {
+        img {
+          opacity: 0.6;
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
+    }
+  }
+}
+
+.headings {
+  h2 {
+    font-size: 30px;
+    font-weight: normal;
+    font-family: 'Great Vibes', cursive;
+  }
+
+  .border-botom {
+    border-bottom: 2px solid black;
   }
 }
