--- a/css/constant.scss
+++ b/css/constant.scss
@@ -1,8 +1,9 @@
 $bodyBg: #f5f5f5;
 $logoTextColor: black;
 $menuTextColor: black;
-$menuHoverBg: #dbff9b;
-$menuHovercolor: rgb(51, 51, 51);
+
+$menuHoverBg: black;
+$menuHovercolor: #f5f5f5;
 
 $mansoryTitleFontSize: 1.25rem;
 $mansoryTitleFont: 'Poppins', sans-serif;
