--- a/css/style.scss
+++ b/css/style.scss
@@ -384,6 +384,10 @@ footer {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 15px;
 
+  @media only screen and (max-width: 600px) {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+
   .category-block {
     position: relative;
     width: 100%;
