--- a/css/constant.scss
+++ b/css/constant.scss
@@ -5,5 +5,8 @@ $menuTextColor: black;
 $menuHoverBg: black;
 $menuHovercolor: #f5f5f5;
 
+$regularTextColor: rgb(44, 44, 44);
+
 $mansoryTitleFontSize: 1.25rem;
 $mansoryTitleFont: 'Poppins', sans-serif;
+$regularFontFamily: 'Poppins', sans-serif;
