--- a/css/style.scss
+++ b/css/style.scss
@@ -311,7 +311,7 @@ footer {
           text-align: left;
           font-size: 16px;
           font-weight: normal;
-          font-family: 'Roboto', sans-serif;
+          font-family: $regularFontFamily;
         }
 
         p {
@@ -319,7 +319,7 @@ footer {
           text-align: left;
           font-size: 18px;
           font-weight: normal;
-          font-family: 'Roboto', sans-serif;
+          font-family: $regularFontFamily;
         }
 
         .discount-price {
@@ -391,10 +391,10 @@ footer {
   .category-block {
     position: relative;
     width: 100%;
-    background: red;
     display: flex;
     align-content: center;
     justify-content: center;
+    cursor: pointer;
 
     img {
       width: 100%;
@@ -407,7 +407,7 @@ footer {
       top: 40%;
 
       h2 {
-        font-family: 'Roboto', sans-serif;
+        font-family: $regularFontFamily;
         color: white;
         text-shadow: 0px 0px 10px black;
         opacity: 0.9;
@@ -415,5 +415,21 @@ footer {
         text-align: center;
       }
     }
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+}
+
+.about-us-block {
+  width: 100%;
+
+  p {
+    font-family: $regularFontFamily;
+    text-align: center;
+    font-weight: 100;
+    font-size: 16px;
+    color: $regularTextColor;
   }
 }
