--- a/css/constant.scss
+++ b/css/constant.scss
@@ -5,8 +5,10 @@ $menuTextColor: black;
 $menuHoverBg: black;
 $menuHovercolor: #f5f5f5;
 
-$regularTextColor: rgb(44, 44, 44);
+$regularTextColor: rgb(61, 61, 61);
 
+$mgCurrentPriceSize: 30px;
 $mansoryTitleFontSize: 1.25rem;
-$mansoryTitleFont: 'Poppins', sans-serif;
-$regularFontFamily: 'Poppins', sans-serif;
+$mansoryTitleFont: 'Lato', sans-serif;
+$regularFontFamily: 'Lato', sans-serif;
+$navBarFont: 'Architects Daughter', cursive;
