--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Great+Vibes&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Poppins:500&display=swap");
@@ -247,15 +248,23 @@ button:hover {
   text-align: center;
 }
 
+.masonry-gallery .masonry-pattern-1 .flip-btm .discount-price .text-info {
+  display: inline;
+}
+
 .masonry-gallery .masonry-pattern-1 .flip-btm h3 {
   margin-top: 20%;
   font-weight: normal;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.25rem;
 }
 
 .masonry-gallery .masonry-pattern-1 .flip-btm h3 span {
   display: block;
+}
+
+.masonry-gallery .masonry-pattern-1 .flip-btm h3 .current-price {
+  font-size: 30px;
 }
 
 .masonry-gallery .masonry-pattern-1 .inline-title {
@@ -270,7 +279,7 @@ button:hover {
 
 .masonry-gallery .masonry-pattern-1 .inline-title h3 {
   font-weight: normal;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.25rem;
 }
 
@@ -336,15 +345,23 @@ button:hover {
   text-align: center;
 }
 
+.masonry-gallery .masonry-pattern-2 .flip-btm .discount-price .text-info {
+  display: inline;
+}
+
 .masonry-gallery .masonry-pattern-2 .flip-btm h3 {
   font-weight: normal;
   margin-top: 20%;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.25rem;
 }
 
 .masonry-gallery .masonry-pattern-2 .flip-btm h3 span {
   display: block;
+}
+
+.masonry-gallery .masonry-pattern-2 .flip-btm h3 .current-price {
+  font-size: 30px;
 }
 
 .masonry-gallery .masonry-pattern-2 .inline-title {
@@ -359,7 +376,7 @@ button:hover {
 
 .masonry-gallery .masonry-pattern-2 .inline-title h3 {
   font-weight: normal;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.25rem;
 }
 
@@ -442,7 +459,7 @@ header nav .navbar li a {
   padding: 10px 20px;
   text-decoration: none;
   color: black;
-  font-family: 'Architects Daughter', cursive;
+  font-family: "Architects Daughter", cursive;
 }
 
 header nav .navbar li a:hover {
@@ -478,7 +495,7 @@ footer .inner-footer .contact-section h3 {
 
 footer .inner-footer .contact-section p {
   font-size: 20px;
-  font-family: 'Architects Daughter', cursive;
+  font-family: "Architects Daughter", cursive;
 }
 
 .social-media {
@@ -554,7 +571,7 @@ footer .inner-footer .contact-section p {
   text-align: left;
   font-size: 16px;
   font-weight: normal;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .product-display-block .product-wrapper .product .product-info p {
@@ -562,7 +579,7 @@ footer .inner-footer .contact-section p {
   text-align: left;
   font-size: 18px;
   font-weight: normal;
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .product-display-block .product-wrapper .product .product-info .discount-price {
@@ -645,6 +662,39 @@ footer .inner-footer .contact-section p {
       -ms-flex-pack: center;
           justify-content: center;
   cursor: pointer;
+  overflow: hidden;
+  /* Hover state - trigger effect */
+  /* Active state */
+}
+
+.categories-block .category-block:after {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -60%;
+  width: 20%;
+  height: 200%;
+  opacity: 0;
+  -webkit-transform: rotate(38deg);
+          transform: rotate(38deg);
+  background: rgba(255, 255, 255, 0.13);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.13)), color-stop(77%, rgba(255, 255, 255, 0.13)), color-stop(92%, rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.13) 0%, rgba(255, 255, 255, 0.13) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0) 100%);
+}
+
+.categories-block .category-block:hover:after {
+  opacity: 1;
+  left: 130%;
+  -webkit-transition-property: left, top, opacity;
+  transition-property: left, top, opacity;
+  -webkit-transition-duration: 0.7s, 0.7s, 0.15s;
+          transition-duration: 0.7s, 0.7s, 0.15s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+}
+
+.categories-block .category-block:active:after {
+  opacity: 0;
 }
 
 .categories-block .category-block img {
@@ -659,7 +709,7 @@ footer .inner-footer .contact-section p {
 }
 
 .categories-block .category-block .category-info h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   color: white;
   text-shadow: 0px 0px 10px black;
   opacity: 0.9;
@@ -676,10 +726,11 @@ footer .inner-footer .contact-section p {
 }
 
 .about-us-block p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   text-align: center;
   font-weight: 100;
   font-size: 16px;
-  color: #2c2c2c;
+  color: #3d3d3d;
+  margin: 10px 0;
 }
 /*# sourceMappingURL=style.css.map */
