--- a/css/style.scss
+++ b/css/style.scss
@@ -243,7 +243,7 @@ footer {
     width: 100%;
     padding: 20px;
     border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    // border-bottom: 2px solid black;
 
     .contact-section {
       margin: auto;
@@ -400,7 +400,7 @@ footer {
 
 .categories-block {
   width: 100%;
-  padding: 15px;
+  padding: 15px 15px 40px 15px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 15px;
@@ -480,6 +480,7 @@ footer {
 
 .about-us-block {
   width: 100%;
+  padding: 20px 40px;
 
   p {
     font-family: $regularFontFamily;
