--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,10 @@
 @import './constant.scss';
 @import './common.scss';
-// @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Great+Vibes&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Poppins:500&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap');
 
 @mixin masonry-img-transistion {
   transition: width 0.5s;
@@ -392,7 +392,7 @@ footer {
     margin-top: 20px;
     border-bottom: 2px solid black;
 
-    @media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 8ate00px) {
       margin-top: 0;
     }
   }
